--- a/css/main.css
+++ b/css/main.css
@@ -324,29 +324,44 @@ footer .social-links {
         margin-top: 1em;
     }
 
+    .container .post{
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+    .container h2{
+        align-self: flex-start;
+        width: 100%;
+    }
 
 
-
-    /*TODO: FALTA CSS */
 } 
 
 @media only screen and (min-width: 1024px) {
 
-       /*TODO: FALTA CSS 
-    .container{
+    .about .container{
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
+        flex-wrap: wrap;
     }
     .container h2{
-        display: block;
+        align-self: flex-start;
+        width: 100%;
+    }
+    .bio-info{
+        padding: 0;
+    }
+    .contact-form{
+        padding: 0;
     }
     .container .bio-info{
-        flex-basis: 60%;
+        flex-basis: 40%;
     }
     .container .contact-form{
-        flex-basis: calc(40% - 2rem);
+        flex-basis: 60%;
     }
-*/
+
+
 
 }
 
