--- a/css/main.css
+++ b/css/main.css
@@ -340,10 +340,28 @@ footer .social-links {
         flex-flow: row wrap;
         margin: 0 5% 0 5%;
     }
+    
+    .container .bio-info{
+        margin: 0 10% 0 10%;
+    }
+    .container .contact{
+        margin: 0 10% 0 10%;
+    }
+    
 
 } 
 
 @media only screen and (min-width: 1024px) {
+
+    .green-area .container ul{
+        display: flex;
+        justify-content: flex-start;
+        flex-flow: wrap;
+    }
+    .green-area .container ul>li{
+        width: 15%;
+        flex-basis: 15%;
+    }
 
     .about .container{
         display: flex;
@@ -357,13 +375,13 @@ footer .social-links {
 
     .container .bio-info{
         flex-basis: 45%;
-        margin-left: 1em;
-        padding: 0 auto 0 1em;
+        margin: 0 0 0 5%;
+        padding: 0;
     }
     .container .contact{
         flex-basis: 45%;
-        margin-right: 1em;
-        padding: 0 1em 0 auto;
+        margin: 0 5% 0 0;
+        padding: 0;
     }
 
 }
@@ -376,4 +394,7 @@ footer .social-links {
         margin: 0 auto;
         max-width: 1440px;
     }
+    
+    
+
 }
