--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@
 }
 
 /* El estilo base para moviles */
+/*Añade las caracteristicas principales del documento como fuente y color de fondo*/
 body {
     background-color: #112935;
     color: white;
@@ -17,32 +18,37 @@ body {
     text-align: center;
     font-weight: 400;
 }
-
+/*Define los elementos de la barra de navegacion para que tengan una misma distancia entre ellos*/
 .header {
     display: flex;
     justify-content: space-between;
     padding: 0px 30px 0px 30px;
 }
 
+/*Oculta el titulo principal*/
 .src-only {
     display: none;
 }
 
+/*Oculta las opciones del menu en moviles*/
 .hide-mobile {
     display: none;
 }
 
+/*Personalizando los parrafos de la pagina*/
 p{
     font-size: 0.75em;
     padding: 1rem;
     line-height: 25px;
 }
 
+/*Personaliza el tamaño y los margenes laterales del logo*/
 .logo {
     width: 90px;
-    margin: 1em;
+    margin: 0 5%;
 }
 
+/*Personaliza el boton para menu para moviles*/
 .options {
     color: inherit;
     text-decoration: none;
@@ -56,15 +62,18 @@ p{
     align-items: flex-start;
 
 }
+/*Cambia tamaño del ultimo elemento i*/
 .options i:last-child {
     font-size: 1.6rem;
 }
 
 /* Big area */
+/*Cambia tamaño de la foto*/
 .big-hero img {
     width: 150px;
 }
 
+/*Personaliza diversos aspectos del titulo Nestor Aldana*/
 .big-hero h2 {
     font-size: 1.875em;
     font-weight: 700;
@@ -72,6 +81,7 @@ p{
     margin-top: 1em ;
 }
 
+/*Personaliza diversos aspectos de la descripcion de Nestor*/
 .big-hero p {
     font-size: 0.7em;;
     color: #D7DEE6;
@@ -79,6 +89,8 @@ p{
 }
 
 /* Social links*/
+
+/*Ubica los iconos de redes sociales */
 .social-links{
     list-style: none;
     padding: 0;
@@ -90,6 +102,7 @@ p{
 
 }
 
+/*Modifica el tamaño y posicion de los iconos de redes sociales*/
 .social-links li a{
     color: #D7DEE6;
     text-decoration: none;
@@ -101,16 +114,17 @@ p{
     top: 25px;
 }
 
-
+/*Modifica el color para el area de publicaciones*/
 .green-area {
     background-color: #0AC693; 
 }
 
-
+/*Personaliza el contenedor de las publicaciones con margenes y padding*/
 .post {
     padding: 1em;
     margin-bottom: -2px;
 }
+/*Personaliza el texto del titulo*/
 .post h2 {
     text-transform: uppercase;
     font-weight: 700;
@@ -118,16 +132,19 @@ p{
     margin: 1em;
 }
 
+/*Quita efectos de una lista*/
 .post ul {
     list-style: none;
 }
 
+/*Personaliza cada uno de los elementos de la lista de publicaciones*/
 .post ul li {
     min-height: 300px;
     max-width: 350px;
     margin: 2rem auto;
 }
 
+/*agrega y personaliza el fondo para cada articulo*/
 .post ul li article {
     overflow: hidden;
     border-radius: 10px;
@@ -136,12 +153,14 @@ p{
     padding-bottom: 2em;
 }
 
+/*Personaliza las imagenes de los articulos*/
 .post article img{
     height: 150px;
     width: 100%;
     object-fit: cover;
 }
 
+/*Personaliza el texto de cada tema de cada articulo*/
 .post article h3 {
     color: #0D5061;
     margin-top: 2em;
@@ -152,6 +171,7 @@ p{
     text-overflow: ellipsis;
 }
 
+/*Personaliza el texto de los parrafos de los articulos*/
 .post article p {
     color:#112935;
     font-size: 0.75em;
@@ -160,11 +180,12 @@ p{
 }
 
 /* About */
-
+/*Agrega margen superior al contenedor de "acerca de"*/
 .about{
     margin-top: 2em;
 }
 
+/*Personaliza el titulo del area*/
 .about h2 {
     text-transform: uppercase;
     font-weight: 700;
@@ -172,13 +193,17 @@ p{
     margin: 2em;
 }
 
+/*Personaliza el contenido que contiene la informacion*/
 .bio-info{
     padding: 0em 3em 0em 3em;
 }
+
+/*Cambia tamaño de la imagen*/
 .bio-info img{
    width: 200px;
 }
 
+/*Personaliza el parrafo del contenido*/
 .bio-info p{
     font-size: 16px;
     padding: 2em;
@@ -187,6 +212,7 @@ p{
     letter-spacing: 2px;
 }
 
+/*Personaliza el contenedor del formulario*/
 .contact {
     display: flex;
     flex-direction: column;
@@ -198,12 +224,14 @@ p{
     margin-top: 1.5em;
 }
 
+/*Personaliza el formulario*/
 .contact-form {
     display: flex;
     flex-direction: column;
     padding: 0em 3em 2em 3em;
 }
 
+/*Personaliza cada uno de los elementos que componen el formulario*/
 .contact-form input, .contact-form textarea{
     padding: 1rem 2rem;
     border: none;
@@ -224,6 +252,7 @@ p{
  
 :-ms-input-placeholder { color: #D7DEE6; }
 
+/*Modifica el boton de contactar*/
 .contact-form input[type=submit] {
     background-color: #F74442;
     font-weight: 400;
@@ -234,16 +263,18 @@ p{
 .black-decoration{
     background-image: url("../images/decoracion_oscura_small.svg");
 }
-
+/*Personaliza el fondo del contenedor*/
 footer{
     background-color: #0D5061;
     color:#D7DEE6;
 }
 
+/*Modifica margen para los iconos de redes sociales en el footer*/
 footer .social-links {
     margin: 0;
 }
 
+/*Establece la ubicacion de la barra con menu para pantallas mas grandes*/
 .menu {
     background-color: #112935;
     position: absolute;
@@ -254,31 +285,35 @@ footer .social-links {
     height: calc(100vh - 60px);
 }
 
+/*Remueve los efectos de una lista para el menu*/
 .menu {
     list-style: none;
     text-align: left;
     padding: 1em;
 }
 
+/*Para cada elemento en la lista añade margen y padding*/
 .menu li {
     display: block;
     padding: 0.5em;
     margin-top: 5px;
 }
 
-
+/*Agrega un color especifico a los textos*/
 .menu li a {
     color: white;
     text-decoration: none;
         
 }
+
+/*Añade hover a cada elemento del menu*/
 .menu li a:hover{
     color: red;
 }
 
 /* Pesonalizando estilo para tablets*/
 @media only screen and (min-width: 768px) {
-  
+    /*Ubica los articulos del area de publicaciones*/
     .post ul {
         list-style: none;
         display: flex;
@@ -286,6 +321,7 @@ footer .social-links {
         justify-content: center;
     }
     
+    /*Personaliza el tamaño de los articulos*/
     .post ul li {
         min-height: 350px;
         max-height: 3500px;
@@ -293,16 +329,18 @@ footer .social-links {
         flex: 1 0 300px;
     }
 
-
+    /*Cambia el tamaño del logo*/
     .logo {
         width: 150px;
         margin: 1.5em;
     }
 
+    /*Muestra el menu*/
     .show-desktop {
         display: block;
     }
 
+    /*Añade color y tamaño al boton para desplazar hacia abajo*/
     .fa-arrow-circle-down{
         font-size: 60px;
         color: #0AC693;
@@ -310,10 +348,12 @@ footer .social-links {
         margin-top: -1em;
     }
 
+    /*Oculta el icono para desplegar menu en la vista para telefonos*/
     .hide-desktop {
         display: none;
     }
 
+    /*Modifica tamaños para el contenedor del menu*/
     .menu {
         background-color: #112935; 
         position: static;
@@ -324,23 +364,21 @@ footer .social-links {
         margin-top: 1em;
     }
 
-    .container .post{
-        display: flex;
-        justify-content: space-around;
-        flex-wrap: wrap;
-    }
+    
+    /*Modifica la posicion del titulo*/
     .container h2{
         align-self: flex-start;
         width: 100%;
     }
 
+    /*Ubica la posicion de los articulos de las publicaciones */
     .green-area .container ul{
         display: flex;
         justify-content: flex-start;
         flex-flow: row wrap;
         margin: 0 5% 0 5%;
     }
-    
+    /*Modifica los margenes de los contenedores de About me*/
     .container .bio-info{
         margin: 0 10% 0 10%;
     }
@@ -353,26 +391,26 @@ footer .social-links {
 
 @media only screen and (min-width: 1024px) {
 
-    .green-area .container ul{
-        display: flex;
-        justify-content: flex-start;
-        flex-flow: wrap;
-    }
+    /*Modifica el tamaño y ancho de los elementos de los articulos*/
     .green-area .container ul>li{
         width: 15%;
         flex-basis: 15%;
     }
 
+    /*Modifica el posicionamiento de los elementos incluidos en About me*/
     .about .container{
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
     }
+
+    /*Modifica el espacio usado por el titulo*/
     .container h2{
         align-self: flex-start;
         width: 100%;
     }
 
+    /*Modifica el espacio utilizado en pantalla por los elementos del About Me*/
     .container .bio-info{
         flex-basis: 45%;
         margin: 0 0 0 5%;
@@ -388,13 +426,11 @@ footer .social-links {
 
 @media only screen and (min-width: 1440px) {
 
-    /*TODO: FALTA CSS */
+    /*Agrega un limite a las dimensiones de los contenedores*/
     .container {
         width: 80%;
         margin: 0 auto;
         max-width: 1440px;
     }
-    
-    
 
 }
